# solvix-chronometry-web

./: .gitignore  README.md
apps/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: .gitkeep  188ce22735db_add_role_column_to_users.py  1f913968b2f7_initial_schema.py  4f33f8a7c2fd_shift_race_indexes_badge_status.py  66978dc0fda6_hash_pass_code.py  7e2eb9c36560_events_shift_id_nullable.py
apps/backend/scripts/: build_core.py  publish_test_event.py  seed_demo.py  seed_demo_processes.py  seed_demo_storyboard.py  seed_minimal.py  seed_users.py  simulator.py  simulator_storyboard.py  simulator_with_anomalies.py  stress_test.py
apps/backend/src/solvix_chronometry/: __init__.py  config.py  db.py  main.py  uuid_v7.py
apps/backend/src/solvix_chronometry/api/: analytics.py  auth.py  badges.py  batches.py  dashboard.py  parts.py  search.py  shifts.py  stations.py  timelines.py  users.py
apps/backend/src/solvix_chronometry/auth/: dependencies.py  hashing.py  jwt.py  schemas.py
apps/backend/src/solvix_chronometry/ws/: hub.py  (+1 more)
apps/backend/static/: dashboard.html
apps/backend/tests/: conftest.py  test_analytics.py  test_auth_sanity.py  test_badges.py  test_batches.py  test_dashboard_incidents.py  test_mqtt_handler_fk.py  test_parts.py  test_search.py  test_shifts.py  test_smoke.py  test_stations.py  test_timelines.py  test_users.py  test_watchdog_norm_exceeded.py  test_watchdog_pause_exceeded.py  test_watchdog_runner.py  test_watchdog_station_idle.py  test_watchdog_transit_stuck.py
(+34 files in other folders)
